[package]
name = "ruml-ox"
version = "0.1.0"
authors = ["VictorieeMan <ruml-ox.io9i6@e-mail.victoriee.org>"]
edition = "2021"
# Repository URL:
# https://github.com/VictorieeMan/ruml-ox

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
